--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                 <div id="fillA-search" class="fill-content">
                     <div class="form-group autocomplete-wrap">
                         <label>Search company register</label>
-                        <input type="text" id="searchA" placeholder="Type company name..." oninput="searchCompany('A', this.value)">
+                        <input type="text" id="searchA" autocomplete="off" placeholder="Type company name..." oninput="searchCompany('A', this.value)">
                         <div id="dropdownA" class="autocomplete-dropdown hidden"></div>
                     </div>
                 </div>
@@ -733,7 +733,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label>Company Name *</label>
-                            <input type="text" id="partyAName" placeholder="Full legal name">
+                            <input type="text" id="partyAName" autocomplete="off" placeholder="Full legal name">
                         </div>
                         <div class="form-group">
                             <label>Entity Type</label>
@@ -750,25 +750,25 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label>Company Number</label>
-                            <input type="text" id="partyACompanyNumber" placeholder="Registration number">
+                            <input type="text" id="partyACompanyNumber" autocomplete="off" placeholder="Registration number">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" id="partyAEmail" placeholder="contact@company.com">
+                            <input type="email" id="partyAEmail" autocomplete="off" placeholder="contact@company.com">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Registered Address *</label>
-                        <input type="text" id="partyAAddress" placeholder="Full registered address">
+                        <input type="text" id="partyAAddress" autocomplete="off" placeholder="Full registered address">
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label>Signatory Name</label>
-                            <input type="text" id="partyASignatory" placeholder="Full name of signatory">
+                            <input type="text" id="partyASignatory" autocomplete="off" placeholder="Full name of signatory">
                         </div>
                         <div class="form-group">
                             <label>Signatory Title</label>
-                            <input type="text" id="partyATitle" placeholder="e.g. CEO, Director, Managing Partner">
+                            <input type="text" id="partyATitle" autocomplete="off" placeholder="e.g. CEO, Director, Managing Partner">
                         </div>
                     </div>
                 </div>
@@ -807,7 +807,7 @@
                 <div id="fillB-search" class="fill-content">
                     <div class="form-group autocomplete-wrap">
                         <label>Search company register</label>
-                        <input type="text" id="searchB" placeholder="Type company name..." oninput="searchCompany('B', this.value)">
+                        <input type="text" id="searchB" autocomplete="off" placeholder="Type company name..." oninput="searchCompany('B', this.value)">
                         <div id="dropdownB" class="autocomplete-dropdown hidden"></div>
                     </div>
                 </div>
@@ -842,7 +842,7 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label>Company Name *</label>
-                            <input type="text" id="partyBName" placeholder="Full legal name">
+                            <input type="text" id="partyBName" autocomplete="off" placeholder="Full legal name">
                         </div>
                         <div class="form-group">
                             <label>Entity Type</label>
@@ -859,25 +859,25 @@
                     <div class="form-row">
                         <div class="form-group">
                             <label>Company Number</label>
-                            <input type="text" id="partyBCompanyNumber" placeholder="Registration number">
+                            <input type="text" id="partyBCompanyNumber" autocomplete="off" placeholder="Registration number">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" id="partyBEmail" placeholder="contact@company.com">
+                            <input type="email" id="partyBEmail" autocomplete="off" placeholder="contact@company.com">
                         </div>
                     </div>
                     <div class="form-group">
                         <label>Registered Address *</label>
-                        <input type="text" id="partyBAddress" placeholder="Full registered address">
+                        <input type="text" id="partyBAddress" autocomplete="off" placeholder="Full registered address">
                     </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label>Signatory Name</label>
-                            <input type="text" id="partyBSignatory" placeholder="Full name of signatory">
+                            <input type="text" id="partyBSignatory" autocomplete="off" placeholder="Full name of signatory">
                         </div>
                         <div class="form-group">
                             <label>Signatory Title</label>
-                            <input type="text" id="partyBTitle" placeholder="e.g. CEO, Director, Managing Partner">
+                            <input type="text" id="partyBTitle" autocomplete="off" placeholder="e.g. CEO, Director, Managing Partner">
                         </div>
                     </div>
                     <div class="form-group">
@@ -2168,8 +2168,21 @@ REQUIREMENTS:
         // ═══════ Init ═══════
         document.addEventListener('DOMContentLoaded', () => {
             document.getElementById('agreementDate').value = new Date().toISOString().split('T')[0];
-            loadPartyData('A');
-            loadPartyData('B');
+
+            // Clear all party fields to prevent browser autofill persistence
+            ['A', 'B'].forEach(party => {
+                ['Name', 'CompanyNumber', 'Address', 'Email', 'Signatory', 'Title'].forEach(field => {
+                    const el = document.getElementById(`party${party}${field}`);
+                    if (el) el.value = '';
+                });
+                const typeEl = document.getElementById(`party${party}Type`);
+                if (typeEl) typeEl.value = 'Company';
+            });
+            const searchA = document.getElementById('searchA');
+            const searchB = document.getElementById('searchB');
+            if (searchA) searchA.value = '';
+            if (searchB) searchB.value = '';
+
             populateHistoryDropdowns();
             updateGoverningLawOptions();
             document.getElementById('partyAAddress').addEventListener('input', updateGoverningLawOptions);
