--- a/index.html
+++ b/index.html
@@ -1328,7 +1328,45 @@
         }
 
         // ═══════ Company Search ═══════
-        // ═══════ Client-side Estonia Register fallback ═══════
+        // Client-side Estonia search (browser bypasses Cloudflare)
+        // + Server-side UK, Czech, OpenCorporates via Netlify function
+        async function searchEstoniaClient(query) {
+            try {
+                const controller = new AbortController();
+                const timeout = setTimeout(() => controller.abort(), 5000);
+                const res = await fetch(`https://ariregister.rik.ee/est/api/autocomplete?q=${encodeURIComponent(query)}`, {
+                    signal: controller.signal,
+                });
+                clearTimeout(timeout);
+                if (!res.ok) return [];
+                const ct = res.headers.get('content-type') || '';
+                if (ct.includes('text/html')) return [];
+                const text = await res.text();
+                if (!text.trim().startsWith('[')) return [];
+                const data = JSON.parse(text);
+                if (!Array.isArray(data)) return [];
+                const statusMap = { 'R': 'Registered', 'Registrisse kantud': 'Registered', 'K': 'Deleted', 'L': 'In liquidation' };
+                return data.map(c => {
+                    let address = c.legal_address || null;
+                    if (address && c.zip_code) address = `${address}, ${c.zip_code}`;
+                    if (address && !address.toLowerCase().includes('estonia')) address = `${address}, Estonia`;
+                    const regCode = String(c.reg_code || '');
+                    return {
+                        source: 'Estonia e-Business Register',
+                        name: c.name || c.nimi,
+                        jurisdiction: 'EE',
+                        address,
+                        status: statusMap[c.status] || c.status || 'Active',
+                        companyNumber: regCode,
+                        companyType: null,
+                        url: `https://ariregister.rik.ee/eng/company/${regCode}`,
+                    };
+                }).filter(r => r.name && r.companyNumber);
+            } catch (e) {
+                return []; // CORS blocked or timeout — silent fail
+            }
+        }
+
         function searchCompany(party, query) {
             const dropdown = document.getElementById(`dropdown${party}`);
             clearTimeout(searchTimeout);
@@ -1339,14 +1377,37 @@
 
             searchTimeout = setTimeout(async () => {
                 try {
-                    const res = await fetch('/.netlify/functions/search-company', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ query })
+                    // Run server search + client-side Estonia in parallel
+                    const [serverRes, eeResults] = await Promise.all([
+                        fetch('/.netlify/functions/search-company', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ query })
+                        }).then(r => safeJson(r)).catch(() => ({ results: [] })),
+                        searchEstoniaClient(query),
+                    ]);
+
+                    // Merge: server results + client-side Estonia, deduplicate
+                    const serverResults = (serverRes.results || []);
+                    const allResults = [...serverResults];
+                    const seenKeys = new Set(serverResults.map(r => `${r.companyNumber}-${(r.jurisdiction||'').toLowerCase()}`));
+                    eeResults.forEach(r => {
+                        const key = `${r.companyNumber}-ee`;
+                        if (!seenKeys.has(key)) {
+                            seenKeys.add(key);
+                            allResults.push(r);
+                        }
                     });
-                    const data = await safeJson(res);
-                    if (data.results && data.results.length > 0) {
-                        dropdown.innerHTML = data.results.map(r => `
+
+                    // Sort: direct registers first
+                    allResults.sort((a, b) => {
+                        const aScore = a.source?.includes('OpenCorporates') ? 1 : 0;
+                        const bScore = b.source?.includes('OpenCorporates') ? 1 : 0;
+                        return aScore - bScore;
+                    });
+
+                    if (allResults.length > 0) {
+                        dropdown.innerHTML = allResults.map(r => `
                             <div class="autocomplete-item" onclick='selectCompany("${party}", ${JSON.stringify(r).replace(/'/g, "&#39;")})'>
                                 <div class="ac-name">${escapeHtml(r.name)}</div>
                                 <div class="ac-meta">
@@ -1362,8 +1423,8 @@
                     } else {
                         dropdown.innerHTML = '<div class="ac-loading">No results found</div>';
                     }
-                    if (data.warning) {
-                        dropdown.innerHTML += `<div class="ac-loading" style="font-size:0.75rem;color:var(--text-muted);">${escapeHtml(data.warning)}</div>`;
+                    if (serverRes.warning) {
+                        dropdown.innerHTML += `<div class="ac-loading" style="font-size:0.75rem;color:var(--text-muted);">${escapeHtml(serverRes.warning)}</div>`;
                     }
                 } catch (e) {
                     dropdown.innerHTML = '<div class="ac-loading">Search error. Try again.</div>';
@@ -1376,7 +1437,11 @@
             document.getElementById(`party${party}CompanyNumber`).value = company.companyNumber || '';
             document.getElementById(`party${party}Address`).value = company.address || '';
             if (company.companyType) {
-                const typeMap = { 'ltd': 'LTD', 'private-limited-guarant-nsc': 'LTD', 'plc': 'Corporation', 'llp': 'Partnership' };
+                const typeMap = {
+                    'ltd': 'LTD', 'private-limited-guarant-nsc': 'LTD', 'plc': 'Corporation', 'llp': 'Partnership',
+                    'oü': 'LTD', 'as': 'Corporation', 'fie': 'Individual', 'mtü': 'Company', 'sa': 'Company',
+                    's.r.o.': 'LTD', 'a.s.': 'Corporation', 'v.o.s.': 'Partnership', 'k.s.': 'Partnership',
+                };
                 const mapped = typeMap[(company.companyType || '').toLowerCase()];
                 if (mapped) document.getElementById(`party${party}Type`).value = mapped;
             }
